--- a/resources/manifests/kube-apiserver.yaml
+++ b/resources/manifests/kube-apiserver.yaml
@@ -25,6 +25,7 @@ spec:
         command:
         - /hyperkube
         - apiserver
+        - --endpoint-reconciler-type=lease \
         - --advertise-address=$(POD_IP)
         - --allow-privileged=true
         - --anonymous-auth=false
