--- a/resources/manifests/kube-apiserver.yaml
+++ b/resources/manifests/kube-apiserver.yaml
@@ -57,6 +57,9 @@ spec:
         - mountPath: /etc/kubernetes/secrets
           name: secrets
           readOnly: true
+        - mountPath: /etc/kubernetes/cloud
+          name: cloud-config
+          readOnly: true
         - mountPath: /var/lock
           name: var-lock
           readOnly: false
@@ -74,6 +77,9 @@ spec:
       - name: secrets
         secret:
           secretName: kube-apiserver
+      - name: cloud-config
+        secret:
+          secretName: kube-cloud-cfg
       - name: var-lock
         hostPath:
           path: /var/lock
